# PastoralProtect

./: .env.example  .gitignore  .mydevelopmentplan  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  cycle.py  demo.py  oracle.py  payments.py  policies.py  storage.py  ussd.py  webhooks.py  zones.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  db_models.py
backend/app/schemas/: __init__.py  admin.py  auth.py  cycle.py  impact.py  oracle.py  payments.py  policies.py  zones.py
backend/app/services/: contract_service.py  cycle_service.py  filecoin_storage_service.py  oracle_service.py  payment_service.py
backend/app/utils/: numeric.py
backend/scripts/: smoke_test.py
contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: PastoralProtectPool.sol
contracts/scripts/: deploy.js
contracts/test/: PastoralProtectPool.test.js
docs/: DEPLOYMENT.md  FUTURE_WORK.md  SETUP.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: dashboard-app.tsx  page.tsx
frontend/components/: landing-page.tsx  pool-chart.tsx  site-header.tsx
frontend/lib/: api.ts
scripts/: bootstrap-local.ps1  bootstrap-local.sh
storacha-uploader/: .env.example  README.md  login.js  package-lock.json  package.json  server.js  storacha-store.js
(+2 files in other folders)
