[project]
name = "pastoral-protect-api"
version = "0.1.0"
description = "PastoralProtect FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "web3>=7.6.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
